test(matrix): :sparkles: add testins

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cSpell.words": ["xirtam"],
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "conventionalCommits.scopes": ["matrix"]
 }
