--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "type": "module",
     "types": "./types/index.d.ts",
     "scripts": {
-        "build": "rimraf lib && tsc"
+        "compile": "rimraf lib && tsc",
+        "test": "vitest"
     },
-    "keywords": [],
+    "keywords": [
+        "matrix",
+        "class",
+        "array"
+    ],
     "author": "Juan Sebastian Castañeda Burbano <sicastaprojectos@gmail.com>",
     "license": "MIT",
     "repository": {
@@ -28,13 +33,15 @@
         "eslint-plugin-n": "15.0.0",
         "eslint-plugin-promise": "6.0.0",
         "rimraf": "^5.0.1",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.3",
+        "vite": "^4.3.9",
+        "vitest": "^0.32.0"
     },
     "files": [
-        "./lib/**/*",
-        "./types/**/*",
-        "./README.md",
-        "./LICENSE"
+        "lib/**/*",
+        "types/**/*",
+        "README.md",
+        "LICENSE"
     ],
     "volta": {
         "node": "18.16.0"
