--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,15 @@
 {
     "compilerOptions": {
-        "module": "ESNext",
+        "module": "ES2022",
         "target": "ES2022",
         "lib": ["ESNext"],
         "moduleResolution": "nodenext",
         "outDir": "./lib",
-        "types": ["node", "jest"],
+        "types": ["node", "./types/index.d.ts"],
         "strictNullChecks": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
-        "noUnusedParameters": true,
-        "useDefineForClassFields": true,
-        "isolatedModules": true,
-        "allowImportingTsExtensions": true
+        "noUnusedParameters": true
     },
-    "include": ["."],
-    "exclude": ["node_modules", "**/node_modules/*", "src/test"]
+    "exclude": ["node_modules", "**/node_modules/*", "test", "vitest.config.ts"]
 }
