--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
         "lib": ["ESNext"],
         "moduleResolution": "nodenext",
         "outDir": "./lib",
-        "types": ["node", "./types/index.d.ts"],
+        "types": ["node"],
         "strictNullChecks": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
         "noUnusedParameters": true
     },
-    "exclude": ["node_modules", "**/node_modules/*", "test", "vitest.config.ts"]
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
